[Publications] Added publications

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script src="//unpkg.com/prismjs@1.13.0/components/prism-bash.min.js"></script>
     <script src="//unpkg.com/prismjs@1.13.0/components/prism-c.min.js"></script>
     <script src="//unpkg.com/prismjs@1.13.0/components/prism-cpp.min.js"></script>
+    <script src="//unpkg.com/prismjs@1.13.0/components/prism-latex.min.js"></script>
     <script src="//unpkg.com/prismjs@1.13.0/components/prism-python.min.js"></script>
   </body>
 </html>
