[Home] Updated quick navigation

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
          '/.*/_navbar.md': '/_navbar.md',
          '/guide/.*/_sidebar.md': '/guide/_sidebar.md',
          '/api/.*/_sidebar.md': '/api/_sidebar.md',
+         '/examples/.*/_sidebar.md': '/examples/_sidebar.md',
        },
 
        auto2top: true,
