--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="google-site-verification" content="y6weeT6Po7QSqWAi0aCB5jhiIWtkIm8Go1TuxaMzl8k" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
     <link rel="stylesheet" href="//unpkg.com/vue-material@beta/dist/vue-material.min.css">
     <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
