--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="google-site-verification" content="y6weeT6Po7QSqWAi0aCB5jhiIWtkIm8Go1TuxaMzl8k" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
     <link rel="stylesheet" href="//unpkg.com/vue-material@beta/dist/vue-material.min.css">
-    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+    <link rel="stylesheet" href="//unpkg.com/docsify@4.7.1/lib/themes/vue.css">
     <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/occa.css">
   </head>
@@ -86,9 +86,9 @@
        },
      })
     </script>
-    <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/ga.min.js"></script>
+    <script src="//unpkg.com/docsify@4.7.1/lib/docsify.min.js"></script>
+    <script src="//unpkg.com/docsify@4.7.1/lib/plugins/search.min.js"></script>
+    <script src="//unpkg.com/docsify@4.7.1/lib/plugins/ga.min.js"></script>
     <script src="//unpkg.com/prismjs@1.13.0/components/prism-bash.min.js"></script>
     <script src="//unpkg.com/prismjs@1.13.0/components/prism-c.min.js"></script>
     <script src="//unpkg.com/prismjs@1.13.0/components/prism-cpp.min.js"></script>
